# brepdb

./: CMakeLists.txt  README.md
include/brepdb/: DiskStorageManager.h  Edge.h  Exception.h  Face.h  IdVisitor.h  Index.h  Leaf.h  Math.h  MemoryStorageManager.h  Node.h  ObjVisitor.h  Point.h  RTree.h  Region.h  ShapeType.h  SpatialIndex.h  Statistics.h  Tools.h  typedef.h
include/spatialdb/: DiskStorageManager.h  Edge.h  Exception.h  Face.h  IdVisitor.h  Index.h  Leaf.h  Math.h  MemoryStorageManager.h  Node.h  ObjVisitor.h  Point.h  RTree.h  Region.h  ShapeType.h  SpatialIndex.h  Statistics.h  Tools.h  typedef.h
platform/msvc/: .gitignore
platform/msvc/projects/: brepdb.vcxproj  brepdb.vcxproj.filters
source/: DiskStorageManager.cpp  Edge.cpp  Exception.cpp  Face.cpp  Index.cpp  Leaf.cpp  Math.cpp  MemoryStorageManager.cpp  Node.cpp  Point.cpp  RTree.cpp  Region.cpp
